# drive

./: .gitignore  .prettierignore  Cargo.toml  LICENSE  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.config/scripts/: git.sh
.scripts/: git.sh
apps/core/: .gitignore  package.json  svelte.config.js  tailwind.config.js
apps/core/src-tauri/: Cargo.toml  tauri.conf.json
apps/core/src/routes/: +layout.svelte
apps/docs/: package.json
crates/crypto/: Cargo.toml
crates/node/: Cargo.toml
crates/system/: Cargo.toml
crates/tools/: Cargo.toml
drive/: Cargo.toml
pkgs/assets/: package.json
pkgs/ui/: package.json
