[workspace]
resolver = "2"
members = ["crates/*", "drive"]
# At the moment, this crate only being used to enable 
# desktop application
#exclude = ["apps/desktop/src-tauri"]


[workspace.package]
edition = "2021"
version = "0.0.1"
repository = "https://github.com/centlax/drive"


[workspace.dependencies]
